--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Sep 02 2019 14:39:51 GMT+0000 (UTC)  -->
+<!--  Last Published: Mon Sep 02 2019 14:47:49 GMT+0000 (UTC)  -->
 <html data-wf-page="5d6d07a40680319166957ede" data-wf-site="5d6d07a4068031c16c957edd">
 <head>
   <meta charset="utf-8">
@@ -14,8 +14,8 @@
   <script type="text/javascript">WebFont.load({  google: {    families: ["Archivo:regular,italic,500,500italic,600,600italic,700,700italic"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="icons/favicon.ico" rel="shortcut icon" type="image/x-icon">
-  <link href="icons/webclip.png" rel="apple-touch-icon">
+  <link href="icons/favicon.gif" rel="shortcut icon" type="image/x-icon">
+  <link href="icons/webclip.gif" rel="apple-touch-icon">
 </head>
 <body class="body">
   <div class="header">
