--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Sep 02 2019 19:38:54 GMT+0000 (UTC)  -->
+<!--  Last Published: Mon Sep 02 2019 19:48:36 GMT+0000 (UTC)  -->
 <html data-wf-page="5d6d07a40680319166957ede" data-wf-site="5d6d07a4068031c16c957edd">
 <head>
   <meta charset="utf-8">
@@ -19,7 +19,7 @@
 </head>
 <body class="body">
   <div class="header">
-    <div class="container w-container"><img src="images/W-Logo---Primary.svg" alt="" class="logo"></div>
+    <div class="container w-container"><img src="images/W-Logo---Secondary.svg" alt="" class="logo"></div>
   </div>
   <div data-collapse="none" data-animation="default" data-duration="400" class="navbar w-nav">
     <div class="navcontainer w-container">
