--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Sep 05 2019 03:54:45 GMT+0000 (UTC)  -->
+<!--  Last Published: Fri Sep 06 2019 01:59:38 GMT+0000 (UTC)  -->
 <html data-wf-page="5d6d07a40680319166957ede" data-wf-site="5d6d07a4068031c16c957edd">
 <head>
   <meta charset="utf-8">
@@ -27,7 +27,7 @@
     </div>
   </div>
   <div id="Music" class="album">
-    <div class="container w-container"><a href="https://moralentropy.bandcamp.com/album/god-save-us" class="button w-button">LISTEN on Bandcamp</a></div>
+    <div class="container w-container"><a href="https://moralentropy.bandcamp.com/album/god-save-us" class="button w-button">listen on Bandcamp</a><a href="https://music.apple.com/us/album/god-save-us-ep/1479097309" class="button w-button">listen on APPLE MUSIC</a></div>
   </div>
   <div id="About" class="content">
     <div class="container-3 w-container">
