adding spotify and apple music links

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Sep 06 2019 01:59:38 GMT+0000 (UTC)  -->
+<!--  Last Published: Fri Sep 06 2019 13:15:39 GMT+0000 (UTC)  -->
 <html data-wf-page="5d6d07a40680319166957ede" data-wf-site="5d6d07a4068031c16c957edd">
 <head>
   <meta charset="utf-8">
@@ -23,11 +23,11 @@
   </div>
   <div data-collapse="none" data-animation="default" data-duration="400" class="navbar w-nav">
     <div class="navcontainer w-container">
-      <nav role="navigation" class="nav-menu w-nav-menu"><a href="#Music" class="navlink w-nav-link">MUSIC</a><a href="#About" class="navlink w-nav-link">ABOUT</a><a href="https://www.facebook.com/MoralEntropy/" class="navlink w-nav-link">FACEBOOK</a><a href="http://instagram.com/moralentropymusic" class="navlink w-nav-link">INSTAGRAM</a><a href="https://moralentropy.bandcamp.com/album/god-save-us" class="navlink w-nav-link">BANDCAMP</a><a href="https://www.youtube.com/channel/UCgqWgyvl96D3DT__Ex2EToQ" class="navlink w-nav-link">YOUTUBE</a></nav>
+      <nav role="navigation" class="nav-menu w-nav-menu"><a href="#Music" class="navlink w-nav-link">MUSIC</a><a href="#About" class="navlink w-nav-link">ABOUT</a><a href="https://www.facebook.com/MoralEntropy/" class="navlink w-nav-link">FACEBOOK</a><a href="http://instagram.com/moralentropymusic" class="navlink w-nav-link">INSTAGRAM</a><a href="https://www.youtube.com/channel/UCgqWgyvl96D3DT__Ex2EToQ" class="navlink w-nav-link">YOUTUBE</a><a href="https://music.apple.com/us/artist/moral-entropy/1478684259" class="navlink w-nav-link">Apple Music</a><a href="https://open.spotify.com/artist/7s4Yd80oLZLlHM1yjDIthq?si=DDhb5ieyRoeDR9kmdt7ryQ" class="navlink w-nav-link">Spotify</a></nav>
     </div>
   </div>
   <div id="Music" class="album">
-    <div class="container w-container"><a href="https://moralentropy.bandcamp.com/album/god-save-us" class="button w-button">listen on Bandcamp</a><a href="https://music.apple.com/us/album/god-save-us-ep/1479097309" class="button w-button">listen on APPLE MUSIC</a></div>
+    <div class="container w-container"><a href="https://open.spotify.com/album/1UD53NKAFMvXEY74sdDvT5?si=fzVNHQ8yTFOhP-FUMavnPw" class="button w-button">listen on Spotify</a><a href="https://music.apple.com/us/album/god-save-us-ep/1479097309" class="button w-button">listen on APPLE MUSIC</a><a href="https://moralentropy.bandcamp.com/album/god-save-us" class="button w-button">listen on Bandcamp</a></div>
   </div>
   <div id="About" class="content">
     <div class="container-3 w-container">
