--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Jul 16 2020 04:54:57 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Aug 27 2020 23:51:53 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f0b3d166632f7e6ac63b94b" data-wf-site="5f0b3d166632f7c70963b94a">
 <head>
   <meta charset="utf-8">
@@ -34,7 +34,7 @@
       <div class="modal-line">
         <div class="info">LISTEN</div>
         <div class="hr-line"></div>
-      </div><a href="https://open.spotify.com/artist/7s4Yd80oLZLlHM1yjDIthq?si=-S7kSVWoSKeD5cjRABAoKA" target="_blank" class="modalbutton w-button">Spotify</a><a href="https://music.apple.com/us/album/let-this-be-a-mirror/1521969294" target="_blank" class="modalbutton w-button">Apple music</a><a href="https://play.google.com/store/music/album/Moral_Entropy_Let_This_Be_a_Mirror?id=Bio6glqypzx5j5bwql2cw2w3n6m" target="_blank" class="modalbutton w-button">Youtube Music</a><a href="https://moralentropy.bandcamp.com/" target="_blank" class="modalbutton w-button">Bandcamp</a><a href="https://soundcloud.com/treggify/sets/mirror" target="_blank" class="modalbutton w-button">Sound cloud</a><a href="https://listen.tidal.com/artist/16756270" target="_blank" class="modalbutton w-button">Tidal</a><a href="https://www.deezer.com/us/artist/73424132" target="_blank" class="modalbutton w-button">Deezer</a></div>
+      </div><a href="https://open.spotify.com/artist/7s4Yd80oLZLlHM1yjDIthq" target="_blank" class="modalbutton w-button">Spotify</a><a href="https://music.apple.com/us/album/let-this-be-a-mirror/1521969294" target="_blank" class="modalbutton w-button">Apple music</a><a href="https://play.google.com/store/music/album/Moral_Entropy_Let_This_Be_a_Mirror?id=Bio6glqypzx5j5bwql2cw2w3n6m" target="_blank" class="modalbutton w-button">Youtube Music</a><a href="https://moralentropy.bandcamp.com/" target="_blank" class="modalbutton w-button">Bandcamp</a><a href="https://soundcloud.com/treggify/sets/mirror" target="_blank" class="modalbutton w-button">Sound cloud</a><a href="https://listen.tidal.com/artist/16756270" target="_blank" class="modalbutton w-button">Tidal</a><a href="https://www.deezer.com/us/artist/73424132" target="_blank" class="modalbutton w-button">Deezer</a></div>
   </div>
   <div class="header-section">
     <div class="container">
@@ -80,7 +80,7 @@
         <div class="album">
           <div class="albumdetails">
             <div class="info">let this be a mirror</div>
-          </div><img src="images/Hero.png" width="448" srcset="images/Hero-p-500.png 500w, images/Hero-p-800.png 800w, images/Hero-p-1080.png 1080w, images/Hero-p-1600.png 1600w, images/Hero.png 1976w" sizes="(max-width: 479px) 77vw, (max-width: 767px) 40vw, (max-width: 991px) 42vw, 448px" alt="">
+          </div><img src="images/Hero.png" width="448" srcset="images/Hero-p-500.png 500w, images/Hero-p-800.png 800w, images/Hero-p-1080.png 1080w, images/Hero-p-1600.png 1600w, images/Hero.png 1976w" sizes="(max-width: 479px) 77vw, (max-width: 767px) 39vw, (max-width: 991px) 41vw, 44vw" alt="">
           <div class="albumdetails">
             <div class="info">07.17.2020</div>
             <div class="info">10 SONGS, 31 MINUTES</div>
@@ -89,7 +89,7 @@
         <div class="album">
           <div class="albumdetails">
             <div class="info">God save us — EP</div>
-          </div><img src="images/GSU-cover.png" width="448" srcset="images/GSU-cover-p-500.png 500w, images/GSU-cover.png 896w" sizes="(max-width: 479px) 77vw, (max-width: 767px) 40vw, (max-width: 991px) 42vw, 448px" alt="">
+          </div><img src="images/GSU-cover.png" width="448" srcset="images/GSU-cover-p-500.png 500w, images/GSU-cover.png 896w" sizes="(max-width: 479px) 77vw, (max-width: 767px) 39vw, (max-width: 991px) 41vw, 44vw" alt="">
           <div class="albumdetails">
             <div class="info">09.05.2019</div>
             <div class="info">4 SONGS, 17 MINUTES</div>
@@ -112,7 +112,7 @@
       </div>
     </div>
   </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js?site=5f0b3d166632f7c70963b94a" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5f0b3d166632f7c70963b94a" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
