--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Jan 31 2022 03:36:10 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Feb 17 2022 05:03:49 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61f5a1af285d56382d3e7a48" data-wf-site="61f5a1af285d56d78c3e7a46">
 <head>
   <meta charset="utf-8">
@@ -45,10 +45,10 @@
           <div class="linegradiate"><img src="images/line-gradiate.svg" loading="lazy" alt="" class="gradient-line"></div>
         </div>
         <div class="button-wrapper">
-          <a href="#" class="button w-button">Spotify</a>
-          <a href="#" class="button w-button">Apple Music</a>
-          <a href="#" class="button w-button">Bandcamp</a>
-          <a href="#" class="button w-button">Soundcloud</a>
+          <a href="https://open.spotify.com/track/1EYua3XrgLigZkIFzp9nC5?si=b119a450797d425a" class="button w-button">Spotify</a>
+          <a href="https://music.apple.com/us/album/raison-d%C3%AAtre-single/1606596175" class="button w-button">Apple Music</a>
+          <a href="#" class="button hidden w-button">Bandcamp</a>
+          <a href="https://soundcloud.com/treggify/raisondetre?si=3588ff116d644504a0f313e8404bb268&amp;utm_source=clipboard&amp;utm_medium=text&amp;utm_campaign=social_sharing" class="button w-button">Soundcloud</a>
         </div>
       </div>
     </div>
@@ -59,7 +59,7 @@
           <div class="album">
             <div class="albumdetails">
               <div class="info">And the city sleeps</div>
-            </div><img src="images/andthecitysleeps.png" width="448" sizes="(max-width: 767px) 91vw, (max-width: 991px) 36vw, 295px" srcset="images/andthecitysleeps-p-500.png 500w, images/andthecitysleeps.png 640w" alt="And The City Sleeps cover art. A dull, gray, city building. Under construction." class="albumart">
+            </div><img src="images/andthecitysleeps.png" width="448" sizes="(max-width: 479px) 80vw, (max-width: 767px) 91vw, (max-width: 991px) 280px, 295px" srcset="images/andthecitysleeps-p-500.png 500w, images/andthecitysleeps.png 640w" alt="And The City Sleeps cover art. A dull, gray, city building. Under construction." class="albumart">
             <div class="albumdetails">
               <div class="info">10.32.2020</div>
               <div class="info">Single, 4 min 52 sec</div>
@@ -71,7 +71,7 @@
           <div class="album">
             <div class="albumdetails">
               <div class="info">let this be a mirror</div>
-            </div><img src="images/Hero.png" width="448" sizes="(max-width: 767px) 91vw, (max-width: 991px) 36vw, 295px" srcset="images/Hero-p-500.png 500w, images/Hero-p-800.png 800w, images/Hero-p-1080.png 1080w, images/Hero-p-1600.png 1600w, images/Hero.png 1976w" alt="Let This Be A Mirror cover art. A vandalized poster. An elderly woman is looking into a mirror. The eyes and mouth have been burned with cigarettes, leaving holes in the poster." class="albumart">
+            </div><img src="images/Hero.png" width="448" sizes="(max-width: 479px) 80vw, (max-width: 767px) 91vw, (max-width: 991px) 280px, 295px" srcset="images/Hero-p-500.png 500w, images/Hero-p-800.png 800w, images/Hero-p-1080.png 1080w, images/Hero-p-1600.png 1600w, images/Hero.png 1976w" alt="Let This Be A Mirror cover art. A vandalized poster. An elderly woman is looking into a mirror. The eyes and mouth have been burned with cigarettes, leaving holes in the poster." class="albumart">
             <div class="albumdetails">
               <div class="info">07.17.2020</div>
               <div class="info">10 SONGS, 31 MIN</div>
@@ -83,7 +83,7 @@
           <div class="album">
             <div class="albumdetails">
               <div class="info">God save us — EP</div>
-            </div><img src="images/GSU-cover.png" width="448" sizes="(max-width: 767px) 91vw, (max-width: 991px) 36vw, 295px" srcset="images/GSU-cover-p-500.png 500w, images/GSU-cover.png 896w" alt="God Save Us cover art. The words &quot;god save us&quot; are scrawled in all caps, written in sharpie, on top of a thick bed of wheat paste posters. Adjacent to the text is a hand, outstretched, reaching upwards." class="albumart">
+            </div><img src="images/GSU-cover.png" width="448" sizes="(max-width: 479px) 80vw, (max-width: 767px) 91vw, (max-width: 991px) 280px, 295px" srcset="images/GSU-cover-p-500.png 500w, images/GSU-cover.png 896w" alt="God Save Us cover art. The words &quot;god save us&quot; are scrawled in all caps, written in sharpie, on top of a thick bed of wheat paste posters. Adjacent to the text is a hand, outstretched, reaching upwards." class="albumart">
             <div class="albumdetails">
               <div class="info">09.05.2019</div>
               <div class="info">4 SONGS, 17 MIN</div>
@@ -99,7 +99,7 @@
         <p class="info paragraph">“I HAVE SEEN EVERYTHING THAT IS DONE UNDER THE SUN, AND BEHOLD, ALL IS VANITY AND A STRIVING AFTER WIND. WHAT IS CROOKED CANNOT BE MADE STRAIGHT, AND WHAT IS LACKING CANNOT BE COUNTED.”</p>
         <p class="info">ECCLES. 1:14 &amp; 15</p>
       </div>
-      <div><img src="images/photo.png" width="780" sizes="(max-width: 767px) 100vw, 48vw" srcset="images/photo-p-500.png 500w, images/photo-p-800.png 800w, images/photo-p-1080.png 1080w, images/photo.png 1582w" alt="Blurry, nondescript self portrait in blue." class="image-7"></div>
+      <div><img src="images/photo.png" width="780" sizes="(max-width: 479px) 93vw, (max-width: 767px) 100vw, 48vw" srcset="images/photo-p-500.png 500w, images/photo-p-800.png 800w, images/photo-p-1080.png 1080w, images/photo.png 1582w" alt="Blurry, nondescript self portrait in blue." class="image-7"></div>
     </div>
     <div class="container div">
       <div class="bottom-line">
