--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Feb 17 2022 05:03:49 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Feb 17 2022 16:13:02 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61f5a1af285d56382d3e7a48" data-wf-site="61f5a1af285d56d78c3e7a46">
 <head>
   <meta charset="utf-8">
@@ -47,7 +47,7 @@
         <div class="button-wrapper">
           <a href="https://open.spotify.com/track/1EYua3XrgLigZkIFzp9nC5?si=b119a450797d425a" class="button w-button">Spotify</a>
           <a href="https://music.apple.com/us/album/raison-d%C3%AAtre-single/1606596175" class="button w-button">Apple Music</a>
-          <a href="#" class="button hidden w-button">Bandcamp</a>
+          <a href="https://moralentropy.bandcamp.com/track/raison-d-tre" class="button w-button">Bandcamp</a>
           <a href="https://soundcloud.com/treggify/raisondetre?si=3588ff116d644504a0f313e8404bb268&amp;utm_source=clipboard&amp;utm_medium=text&amp;utm_campaign=social_sharing" class="button w-button">Soundcloud</a>
         </div>
       </div>
